TASK(API) Rename date interval path parameters
